syntax = "proto3";
package core.vault;

option go_package = "github.com/sonrhq/core/x/vault/types";

message ClaimableWallet {
  uint64 index = 1;
  string creator = 2;
  string did = 3;
}
